<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="75dp"
        android:layout_height="100dp"
        android:src="@drawable/persoana"
        android:layout_margin="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#1f1f">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textStyle="bold"
            android:id="@+id/nume_angajat_lista"
            android:text="@string/nume"
            android:layout_margin="5dp"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textStyle="bold"
            android:id="@+id/prenume_angajat"
            android:text="@string/prenume"
            android:layout_margin="5dp"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textStyle="bold"
            android:id="@+id/functie_angajat"
            android:text="@string/functie"
            android:layout_margin="5dp"
            android:textSize="20sp"/>
    </LinearLayout>

</LinearLayout>