<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/pink_background"
    tools:context=".RegisterActivity">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/new_final_logo"
        android:paddingVertical="20dp"
        android:layout_marginVertical="0dp"/>


    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="420dp"
        android:orientation="vertical"
        android:background="@drawable/edit_text_bg"
        android:layout_gravity="center"
        android:padding="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_marginHorizontal="30dp"
            android:layout_height="wrap_content"
            android:text="@string/nume"
            android:textColor="@color/purple_500"
            />
        <EditText
            android:id="@+id/nume_case"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:background="@drawable/edit_text_bg"
            android:paddingHorizontal="12dp"
            android:paddingVertical="10dp"
            android:layout_marginHorizontal="30dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_marginHorizontal="30dp"
            android:layout_height="wrap_content"
            android:text="@string/prenume"
            android:textColor="@color/purple_500"
            />
        <EditText
            android:id="@+id/prenume_case"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:background="@drawable/edit_text_bg"
            android:paddingHorizontal="12dp"
            android:paddingVertical="10dp"
            android:layout_marginHorizontal="30dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_marginHorizontal="30dp"
            android:layout_height="wrap_content"
            android:text="@string/e_mail"
            android:textColor="@color/purple_500"
            />
        <EditText
            android:id="@+id/email_case"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:background="@drawable/edit_text_bg"
            android:paddingHorizontal="12dp"
            android:paddingVertical="10dp"
            android:layout_marginHorizontal="30dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_marginHorizontal="30dp"
            android:layout_height="wrap_content"
            android:text="@string/cod_inregistrare"
            android:textColor="@color/purple_500"
            />
        <EditText
            android:id="@+id/cod_case"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:background="@drawable/edit_text_bg"
            android:paddingHorizontal="12dp"
            android:paddingVertical="10dp"
            android:layout_marginHorizontal="30dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_marginHorizontal="30dp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/purple_500"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="270dp"
            android:layout_height="50dp"
            app:passwordToggleEnabled="true"
            android:layout_gravity="center"
            android:paddingVertical="10dp"
            android:background="@drawable/edit_text_bg">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/parola_case"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/white"
                android:textAlignment="textStart"
                android:inputType="textPassword"
                android:paddingHorizontal="12dp"
                android:paddingVertical="10dp"
                android:layout_marginHorizontal="15dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_marginHorizontal="30dp"
            android:layout_height="wrap_content"
            android:text="@string/functie"
            android:textColor="@color/purple_500"
            />
        <Spinner
            android:id="@+id/spin_functie"
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/edit_text_bg"/>
    </LinearLayout>
    <Button
        android:id="@+id/inregistrare_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inregistreaza"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/button_bg" />

</LinearLayout>