<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntroducerePreparatActivity"
    android:orientation="vertical"
    android:background="@drawable/pink_background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/inverse_logo"/>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:text="@string/nume"
                    android:textAlignment="center"
                    android:fontFamily="@font/pacifico"
                    android:textSize="20sp"
                    android:layout_marginVertical="5dp"/>

                <EditText
                    android:id="@+id/preparat"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_marginVertical="5dp"
                    android:inputType="text"
                    android:singleLine="true"
                    android:gravity="center"
                    android:background="@drawable/edit_text_bg"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:text="@string/tip"
                    android:textAlignment="center"
                    android:fontFamily="@font/pacifico"
                    android:textSize="20sp"
                    android:layout_marginVertical="5dp"/>

                <Spinner
                    android:id="@+id/tip_preparat"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:background="@drawable/edit_text_bg"
                    android:layout_marginVertical="5dp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/lista_ingrediente"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="5dp"
            android:background="@drawable/edit_text_bg"/>

        <Button
            android:id="@+id/adg_ingredient"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/plus"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginVertical="5dp"
            android:layout_marginStart="30sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/ingredient_cantitate"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="10dp"
            android:inputType="number"
            android:gravity="center"
            android:singleLine="true"
            android:background="@drawable/edit_text_bg"/>

        <TextView
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:text="@string/ml_g"
            android:textAlignment="center"
            android:fontFamily="@font/pacifico"
            android:textSize="20sp"
            android:layout_marginVertical="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:text="@string/pret"
            android:textAlignment="center"
            android:fontFamily="@font/pacifico"
            android:textSize="20sp"
            android:layout_marginStart="80dp" />

        <EditText
            android:id="@+id/pret_preparat"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginVertical="5dp"
            android:inputType="number"
            android:singleLine="true"
            android:gravity="center"
            android:background="@drawable/edit_text_bg"/>

    </LinearLayout>

    <ListView
        android:id="@+id/ingrediente"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:background="@drawable/edit_text_bg"
        android:layout_marginVertical="10dp"/>



    <Button
        android:id="@+id/adg_preparat"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/adauga_in_meniu"
        android:fontFamily="@font/pacifico"
        android:layout_gravity="center"/>

</LinearLayout>